<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.angelo.popularmovies.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movies_picture_description"
                android:scaleType="centerCrop" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/movie_poster_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/movie_poster_label" />

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/poster"
                    android:contentDescription="@string/movie_name_label"
                    android:maxLines="1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/movie_name"
                    android:layout_below="@+id/movie_name"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/movie_rating_label"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movie_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_below="@id/poster"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:text="@string/detail_movie_overview_label"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_below="@+id/movie_overview_title"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/movie_rating_label"
                    android:maxLines="1"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
